// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Internal|UpdateDebateOpinion mutation Update a debate opinion. 1`] = `
Object {
  "updateDebateOpinion": Object {
    "debateOpinion": Object {
      "author": Object {
        "id": "VXNlcjp1c2VyNQ==",
      },
      "body": "Questionnaire non rattaché",
      "debate": Object {
        "id": "RGViYXRlOmRlYmF0ZUNhbm5hYmlz",
      },
      "id": "RGViYXRlT3BpbmlvbjpkZWJhdGVDYW5uYWJpc09waW5pb24x",
      "title": "Questionnaire non rattaché",
      "type": "FOR",
    },
    "errorCode": null,
  },
}
`;

exports[`Internal|UpdateDebateOpinion mutation Update partially a debate opinion. 1`] = `
Object {
  "updateDebateOpinion": Object {
    "debateOpinion": Object {
      "author": Object {
        "id": "VXNlcjp1c2VyNQ==",
      },
      "body": "Questionnaire non rattaché",
      "debate": Object {
        "id": "RGViYXRlOmRlYmF0ZUNhbm5hYmlz",
      },
      "id": "RGViYXRlT3BpbmlvbjpkZWJhdGVDYW5uYWJpc09waW5pb24x",
      "title": "Questionnaire non rattaché",
      "type": "AGAINST",
    },
    "errorCode": null,
  },
}
`;
